@@ -103,8 +103,9 @@
     <Compile Include="ComputeServiceConnection.cs" />
     <Compile Include="AddCaasBackupClientCmdlet.cs" />
     <Compile Include="EnableCaasVendorMultiGeoCustomerCmdlet.cs" />
-    <Compile Include="ExistCaasVendorAccountCmdlet.cs" />
+    <Compile Include="FindCaasVendorAccountCmdlet.cs" />
     <Compile Include="GetCaasConnectionCmdlet.cs" />
+    <Compile Include="RemoveCaasConnectionCmdlet.cs" />
     <Compile Include="SecureStringExtensions.cs" />
     <Compile Include="GetCaasAccountsCmdlet.cs" />
     <Compile Include="GetCaasMultiGeoRegionsCmdlet.cs" />
@@ -147,9 +148,9 @@
     <Compile Include="ResetCaasAccountPasswordCmdlet.cs" />
     <Compile Include="SetCaasAccountCmdlet.cs" />
     <Compile Include="SetCaasAccountPrimaryAdministratorCmdlet.cs" />
-    <Compile Include="CancelCaasVendorCustomerCmdlet.cs" />
+    <Compile Include="RemoveCaasVendorCustomerCmdlet.cs" />
     <Compile Include="SetCaasActiveConnectionCmdlet.cs" />
-    <Compile Include="UnsuspendCaasVendorCustomerCmdlet.cs" />
+    <Compile Include="ResumeCaasVendorCustomerCmdlet.cs" />
     <Compile Include="SuspendCaasVendorCustomerCmdlet.cs" />
     <Compile Include="SetCaasVipCmdlet.cs" />
     <Compile Include="SetCaasServerFarmCmdlet.cs" />
